# operation-systems

./: CMakeLists.txt  README.md  kolok_1.sln  lab1_potok.cpp
kolok_1/: PalindromeTests.cpp  kolok_1.cpp  kolok_1.vcxproj  kolok_1.vcxproj.filters
lab_2_processes/: CMakeLists.txt
lab_2_processes/apps/: CMakeLists.txt  lab_2_processes.cpp  lab_2_processes.h
lab_2_processes/include/: array_ops.hpp
lab_2_processes/src/: array_ops.cpp
lab_2_processes/tests/: CMakeLists.txt
